src/test/ui/consts/issue-55878.stderr
error[E0080]: reaching this expression at runtime will panic or abort
  --> $SRC_DIR/libcore/mem/mod.rs:LL:COL
   |
LL |     intrinsics::size_of::<T>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the type `[u8; 18446744073709551615]` is too big for the current architecture
   | 
  ::: $DIR/issue-55878.rs:3:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; std::u64::MAX as usize]>());
   |                          ---------------------------------------------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
